# internal/department/routers.go
@@ -1,0 +1,25 @@
+/*
+ * Waiting List Api
+ *
+ * Department List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: your_email@example.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package department
+
+import (
+    "github.com/gin-gonic/gin"
+)
+
+func AddRoutes(engine *gin.Engine) {
+  group := engine.Group("/api")
+  
+  {
+    api := newDefaultAPI()
+    api.addRoutes(group)
+  }
+  
+}
